# sweep

./: README.md  pyproject.toml  test.sh
tests/: __init__.py  __main__.py  test_adaptive.py  test_base.py  test_vector.py
vsweep/: __init__.py  adaptive.py  base.py  vector.py
