[project]
name = "vsweep"
version = "0.1.0"
description = "A cute way to perform sweeps"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["sweep", "experiment", "adaptive"]
authors = [{ name = "Vianney Rousset" }]
maintainers = [{ name = "Vianney Rousset" }]
classifiers = [ # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [ # Optional
  "numpy",
  "adaptive",
]

[project.optional-dependencies]
dev = ["black"]
test = []

[project.urls] # Optional
"Homepage" = "https://github.com/VianneyRousset/vsweep"
"Bug Reports" = "https://github.com/VianneyRousset/vsweep"
"Source" = "https://github.com/VianneyRousset/vsweep"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
